Changing sql queries based on dto