@@ -1,6 +1,7 @@
 package com.example.app.services;
 
 import com.example.app.dataAccess.PostRepository;
+import com.example.app.entities.Like;
 import com.example.app.entities.Post;
 import com.example.app.entities.User;
 import com.example.app.requests.CreatePostRequest;
@@ -13,14 +14,15 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
 public class PostService {
 
-    private PostRepository postRepository;
-    private UserService userService;
+    private final PostRepository postRepository;
+    private final UserService userService;
     private LikeService likeService;
 
 
@@ -35,47 +37,54 @@ public class PostService {
     }
 
     public List<PostResponse> getAllPosts(Optional<Long> userId) {
-        List<Post> postList;
-        if (userId.isPresent()) {
-            postList = postRepository.findByUserId(userId.get());
-        }else{
-            postList = postRepository.findAll();
-        }
-        return postList.stream().map(post -> {
-            List<LikeResponse> likes = likeService.getAllLikes(Optional.ofNullable(null),Optional.of(post.getId()));
-            return new PostResponse(post,likes);}).collect(Collectors.toList());
+        List<Post> postList = userId
+                .map(postRepository::findByUserId)
+                .orElseGet(postRepository::findAll);
+
+        return postList.stream()
+                .map(post -> {
+                    List<LikeResponse> likes = likeService.getAllLikes(Optional.empty(), Optional.of(post.getId()));
+                    return new PostResponse(post, likes);
+                })
+                .toList();
     }
+
     public Post getPostById(Long postId) {
+        System.out.println("PostService - getPostById called with postId: " + postId);
         return postRepository.findById(postId).orElse(null);
     }
+
     public PostResponse getPostByIdWithLikes(Long postId) {
         Post post = postRepository.findById(postId).orElse(null);
-        List<LikeResponse> likes = likeService.getAllLikes(Optional.ofNullable(null),Optional.of(postId));
-        return new PostResponse(post, likes);
+        List<LikeResponse> likes = likeService.getAllLikes(Optional.empty(), Optional.of(postId));
+        if (post != null) {
+            return new PostResponse(post, likes);
+        } else {
+            return null;
+        }
     }
 
     public Post createPost(CreatePostRequest newPostRequest) {
         User user = userService.getUserById(newPostRequest.getUserId());
-        if(user==null){
+        if(user != null) {
+            Post post = new Post();
+            post.setText(newPostRequest.getText());
+            post.setTitle(newPostRequest.getTitle());
+            post.setUser(user);
+            post.setCreateDate(LocalDateTime.now());
+            return postRepository.save(post);
+        } else {
             return null;
         }
-        Post post = new Post();
-        post.setId(newPostRequest.getId());
-        post.setText(newPostRequest.getText());
-        post.setTitle(newPostRequest.getTitle());
-        post.setUser(user);
-        post.setCreateDate(LocalDateTime.now());
-        return postRepository.save(post);
     }
 
     public Post updatePostById(Long postId, UpdatePostRequest updatePostRequest) {
-        Optional <Post> post = postRepository.findById(postId);
-        if(post.isPresent()){
-            Post updatePost = post.get();
-            updatePost.setText(updatePostRequest.getText());
-            updatePost.setTitle(updatePostRequest.getTitle());
-            postRepository.save(updatePost);
-            return updatePost;
+        Post post = postRepository.findById(postId).orElse(null);
+        if(post != null) {
+            post.setText(updatePostRequest.getText());
+            post.setTitle(updatePostRequest.getTitle());
+            postRepository.save(post);
+            return post;
         }
         return null;
     }
